<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="action_settings">Settings</string>
    <string name="activity_main_title">My Nanodegree Apps !</string>
    <string name="activity_main_cmd_media_streamer">Spotify Streamer</string>
    <string name="activity_main_cmd_super_duo1">Scores App</string>
    <string name="activity_main_cmd_super_duo2">Library App</string>
    <string name="activity_main_cmd_ant_terminator">Build it Bigger</string>
    <string name="activity_main_cmd_materialize">XYZ Reader</string>
    <string name="activity_main_cmd_captsone">Capstone: my own app</string>
    <string name="activity_main_msg_button_format">This button will lanch %s!</string>
    <string name="activity_main_msg_settings">My settings !</string>
    <string name="activity_main_msg_cmd_captstone">my capstone app</string>
</resources>
