<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@color/main_bg">

    <TextView android:text="@string/activity_main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text1"
        android:layout_centerHorizontal="true"
        android:textSize="22sp"/>

    <Button
        style="@style/AppTheme_MainButton"
        android:text="@string/activity_main_cmd_media_streamer"
        android:id="@+id/cmd_media_streamer"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/text1"
        android:onClick="onClick"/>

    <Button
        style="@style/AppTheme_MainButton"
        android:text="@string/activity_main_cmd_super_duo1"
        android:id="@+id/cmd_super_duo1"
        android:layout_below="@+id/cmd_media_streamer"
        android:onClick="onClick" />

    <Button
        style="@style/AppTheme_MainButton"
        android:text="@string/activity_main_cmd_super_duo2"
        android:id="@+id/cmd_super_duo2"
        android:layout_below="@+id/cmd_super_duo1"
        android:onClick="onClick" />

    <Button
        style="@style/AppTheme_MainButton"
        android:text="@string/activity_main_cmd_ant_terminator"
        android:id="@+id/cmd_ant_terminator"
        android:layout_below="@+id/cmd_super_duo2"
        android:onClick="onClick" />

    <Button
        style="@style/AppTheme_MainButton"
        android:text="@string/activity_main_cmd_materialize"
        android:id="@+id/cmd_materialize"
        android:layout_below="@+id/cmd_ant_terminator"
        android:onClick="onClick" />

    <Button
        style="@style/AppTheme_MainButton"
        android:text="@string/activity_main_cmd_captsone"
        android:id="@+id/cmd_captsone"
        android:layout_below="@+id/cmd_materialize"
        android:background="#ffaf1d25"
        android:textColor="@android:color/white"
        android:onClick="onClick" />

</RelativeLayout>
